--- a/src/about/about-styles.css
+++ b/src/about/about-styles.css
@@ -2,9 +2,9 @@ header {
   padding: 10px 20px;
 }
 
-main {
-    padding: 10px;
-    flex: 1 calc(100vh - 110px);
+.about-main {
+  padding: 10px;
+  flex: 1 calc(100vh - 110px);
   display: flex;
   flex-direction: column;
   align-items: center;
